<resources>
    <string name="app_name">SurrealistWriter</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Enter your password ! </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Register Activity -->
    <string name="title_registration_activity">Registration</string>
    <string name="reg_username">User name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_register_button">Register</string>
    <string name="error_incorrect_email">This email is incorrect </string>
    <string name="title_activity_waiting">WaitingActivity</string>
</resources>
